# hrvo_real_robot_navigation

./: .gitignore  run_pedsim_gazebo.sh  run_pedsim_gazebo_diff_bot.sh
diff_bringup/: CMakeLists.txt  package.xml
diff_bringup/launch/: diff_bringup.launch  diff_state.launch
diff_control/: CMakeLists.txt  README.md  package.xml
diff_control/config/: diff_drive_limits.yaml
diff_control/launch/: gazebo_diff_velocity.launch
diff_control/scripts/: cmd_vel_gate.py
src/diff_description/: CMakeLists.txt  README.md  package.xml
src/diff_description/launch/: diff_bot_gazebo_rviz.launch
src/diff_description/rviz/: gazebo_spawn_model.rviz
src/diff_description/urdf/: VLP-16_pedsim.xacro  diff_bot.urdf.xacro
src/diff_keyboard_teleop/: CMakeLists.txt  README.md  package.xml
src/diff_keyboard_teleop/launch/: diff_keyboard_teleop.launch
src/diff_keyboard_teleop/scripts/: diff_keyboard_teleop.py
src/diff_simulation/: CMakeLists.txt  README.md  package.xml
src/diff_simulation/config/: laser_filter_params.yaml
src/diff_simulation/launch/: ICR2026_simulation.launch  diff_bot_simulation.launch  pedsim_diff_bot.launch  rviz_diff_bot_urdf_only.launch
src/diff_simulation/param/: costmap_common_params.yaml  dummy.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  navfn_global_planner_params.yaml
src/diff_simulation/scenarios/: airport_activities_100.xml  airport_activities_30.xml  f21_wall_full_pedsim.xml  singleagent_10.xml  singleagent_15_chaotic.xml
src/gazebo_ros_actor_plugin/: CMakeLists.txt  README_4_DOCTORS.md  package.xml
src/gazebo_ros_actor_plugin/launch/: sim_4_doctors (copy).launch
src/gazebo_ros_actor_plugin/scripts/: actor_controller.py  debug_topics.py  multi_actor_path_publisher.py  multi_actor_path_publisher1.py  multi_actor_path_publisher_one.py  path_publisher.py  path_publisher_4_doctors.py  simple_path_publisher.py
src/gazebo_ros_actor_plugin/src/: gazebo_ros_actor_command.cpp
src/gazebo_sfm_plugin/: CMakeLists.txt
src/gazebo_sfm_plugin/launch/: lab_spain_walking_people.launch
src/gazebo_sfm_plugin/worlds/: minh_wall (copy).world  minh_wall.world  mo_hinh.world  office.world
src/hrvo_local_planner/: CMakeLists.txt  hrvo_plugin.xml  package.xml
src/hrvo_local_planner/cfg/: hrvo_local_planner.yaml  hrvo_local_planner_diff_fast.yaml  hrvo_local_planner_omni.yaml  hrvo_local_planner_omni_fast.yaml
src/hrvo_local_planner/launch/: hrvo_input_fusion.launch  pedsim_pedbot_diff_drive.launch  x_omni4wd_HRVO_simulation.launch
src/hrvo_local_planner/msg/: HRVOAgent.msg  HRVOInput.msg
src/hrvo_local_planner/scripts/: hrvo_input_fusion_node.py  hrvo_pedestrian_adapter_node.py
src/hrvo_local_planner/src/: Agent.cpp  Goal.cpp  KdTree.cpp  Simulator.cpp  Vector2.cpp  diff_drive_twist_adapter.cpp  hrvo_local_planner (ban chuan).cpp  hrvo_local_planner (copy).cpp  hrvo_local_planner(global).cpp  hrvo_local_planner.cpp
src/social_density_fusion/: CMakeLists.txt  package.xml
src/social_density_fusion/config/: costmapEx_33_people.yaml
src/social_density_fusion/launch/: social_density_fusion.launch
src/social_density_fusion/msg/: DensityInfo.msg
src/social_density_fusion/scripts/: lidar_map_polygon_node.py  social_density_fusion_node.py
src/social_navigation_layers/: CHANGELOG.rst  CMakeLists.txt  README.md  costmap_plugins.xml  package.xml
src/social_navigation_layers/cfg/: EmotionLayer.cfg  HumanGroupLayer.cfg  HumanObjectLayer.cfg  ProxemicLayer.cfg
src/social_navigation_layers/config/: diagnostics.yaml
src/social_navigation_layers/example/: emotion_layer_example.yaml
src/social_navigation_layers/launch/: test_emotion_layer_simple.launch
src/social_navigation_layers/maps/: map.yaml
src/social_navigation_layers/rviz/: emotion_layer.rviz
src/social_navigation_layers/scripts/: density_monitor.py  draw_elip copy.py  dstar_algorithm.py
src/social_navigation_layers/src/: emotion_layer.cpp  human_group_layer.cpp  human_object_layer.cpp  passing_layer.cpp  path_density_weight_controller.py  proxemic_layer.cpp  social_layer.cpp
src/social_navigation_monitor/: CMakeLists.txt  README.md  package.xml
src/social_navigation_monitor/msg/: SGI.msg  SII.msg
src/social_navigation_monitor/scripts/: move_base_status_timeline.py  path_planning_monitor.py  sgi_calculator.py  sii_calculator.py  social_navigation_dashboard.py
src/x_omni4wd_description/: CMakeLists.txt  package.xml
src/x_omni4wd_description/meshes/: base_link.STL  front_left_wheel_link.STL  lidar_link.STL  roller_wheel_21_10_link.STL  roller_wheel_21_1_link.STL  roller_wheel_21_2_link.STL  roller_wheel_21_4_link.STL  roller_wheel_21_5_link.STL  roller_wheel_21_6_link.STL  roller_wheel_21_8_link.STL  roller_wheel_21_9_link.STL  roller_wheel_22_1_link.STL  roller_wheel_22_3_link.STL  roller_wheel_22_6_link.STL  roller_wheel_22_9_link.STL  roller_wheel_31_11_link.STL  roller_wheel_31_1_link.STL  roller_wheel_31_7_link.STL  roller_wheel_31_9_link.STL  roller_wheel_32_10_link.STL  roller_wheel_32_2_link.STL  roller_wheel_32_4_link.STL  roller_wheel_32_6_link.STL  roller_wheel_32_7_link.STL  roller_wheel_32_8_link.STL  roller_wheel_32_9_link.STL  roller_wheel_41_2_link.STL  roller_wheel_41_5_link.STL  roller_wheel_41_7_link.STL  roller_wheel_41_8_link.STL  roller_wheel_41_9_link.STL  roller_wheel_42_10_link.STL  roller_wheel_42_1_link.STL  roller_wheel_42_2_link.STL  roller_wheel_42_5_link.STL  roller_wheel_42_6_link.STL  roller_wheel_42_7_link.STL  roller_wheel_42_8_link.STL  roller_wheel_42_9_link.STL  (+15 more)
src/x_omni4wd_gazebo/: CMakeLists.txt  README.md  README_SLAM.md
src/x_omni4wd_keyboard_teleop/: CMakeLists.txt
src/x_omni4wd_navigation/: CMakeLists.txt  package.xml
src/x_omni4wd_simulation/: CMakeLists.txt
src/x_omni4wd_slam/: CMakeLists.txt
x_omni4wd/x_omni4wd_control/: BAO_CAO_IMPLEMENTATION.md  CAY_FILE.md  CMakeLists.txt  package.xml
x_omni4wd/x_omni4wd_gazebo/: package.xml
x_omni4wd/x_omni4wd_keyboard_teleop/: README.md  package.xml
x_omni4wd/x_omni4wd_simulation/: package.xml
(+799 files in other folders)
