<?xml version="1.0"?>
<package format="2">
  <name>diff_bringup</name>
  <version>1.0.0</version>
  <description>
    Bringup robot diff (mô hình x_omni4wd_bringup): URDF từ diff_description,
    robot_state_publisher + joint_state_publisher cho RViz/bag; không chứa Gazebo/Pedsim
    (xem diff_simulation).
  </description>

  <maintainer email="anhquyentp34@gmail.com">quyenanh pt</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>diff_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz</exec_depend>
  <export/>
</package>
