<?xml version="1.0"?>
<package format="2">
  <name>diff_description</name>
  <version>0.0.0</version>
  <description>URDF diff_bot + Velodyne, launch Gazebo/RViz (diff_bot_gazebo_rviz).</description>

  <maintainer email="anhquyentp34@gmail.com">quyenanh pt</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>velodyne_description</exec_depend>
  <exec_depend>velodyne_gazebo_plugins</exec_depend>

  <export/>
</package>
