<?xml version="1.0"?>
<package format="2">
  <name>diff_keyboard_teleop</name>
  <version>0.1.0</version>
  <description>Teleop bàn phím toàn cục (pynput) cho robot diff: cmd_vel chỉ linear.x và angular.z (REP-103), làm mượt theo gia tốc. Theo mẫu x_omni4wd_keyboard_teleop (ICR2026).</description>

  <maintainer email="anhquyentp34@gmail.com">quyenanh pt</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
