<?xml version="1.0"?>
<package format="2">
  <name>social_density_fusion</name>
  <version>0.0.1</version>
  <description>Headless fusion package for social-state and density.</description>

  <maintainer email="anhquyentp34@gmail.com">quyenanh pt</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>social_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>message_runtime</exec_depend>

  <export/>
</package>
