<?xml version="1.0"?>
<package>
  <name>social_navigation_layers</name>
  <version>1.0.4</version>
  <description>
  Plugin-based layers for the navigation stack that 
  implement various social navigation contraints, like proxemic distance. 
  </description>

  <maintainer email="anhquyentp34@gmail.com">quyenanh pt</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/social_navigation_layers</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>social_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>angles</build_depend> 
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>pluginlib</build_depend> 
  <build_depend>gazebo_ros</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>social_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>geometry_msgs</run_depend> 
  <run_depend>nav_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>gazebo_ros</run_depend>
  
  <test_depend>roslint</test_depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
  </export>

</package>


