<?xml version="1.0"?>
<package format="2">
  <name>x_omni4wd_control</name>
  <version>1.0.0</version>
  <description>ROS Control package for x_omni4wd X-drive omniwheel robot with wheel-level kinematics</description>

  <maintainer email="anhquyentp34@gmail.com">quyenanh pt</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>velocity_controllers</depend>
  <depend>x_omni4wd_description</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>

  <export>
  </export>
</package>

